WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
313599
Unreview unified build fix for MediaPlayerPrivateWirelessPlayback.cpp.
https://bugs.webkit.org/show_bug.cgi?id=313599
Summary
Unreview unified build fix for MediaPlayerPrivateWirelessPlayback.cpp.
Megan Gardner
Reported
2026-04-28 17:23:05 PDT
Unreview unified build fix for MediaPlayerPrivateWirelessPlayback.cpp.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-04-28 17:23:12 PDT
<
rdar://problem/175804637
>
Megan Gardner
Comment 2
2026-04-28 17:25:51 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/63858
EWS
Comment 3
2026-04-28 17:51:58 PDT
Committed
312252@main
(d20cd93b08af): <
https://commits.webkit.org/312252@main
> Reviewed commits have been landed. Closing PR #63858 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug