Unreview unified build fix for MediaPlayerPrivateWirelessPlayback.cpp. https://bugs.webkit.org/show_bug.cgi?id=313599 rdar://175804637

Reviewed by Mike Wyrzykowski.

* Source/WebCore/platform/graphics/MediaPlayerPrivateWirelessPlayback.cpp:

Canonical link: https://commits.webkit.org/312252@main